--- a/src/app/index.html
+++ b/src/app/index.html
@@ -32,27 +32,27 @@
       </div>
       <nav class="collapse navbar-collapse" role="navigation">
         <ul class="nav navbar-nav">
-          <li ng-class="{active: routeIs('/appointments')}" ng-show='user.isCustomer()'><a href="#/appointments"
+          <li ng-class="{active: routeIs('/appointments')}" ng-show='!user.isDoctor'><a href="#/appointments"
               translate>Appointments</a></li>
         </ul>
         <ul class="nav navbar-right" ng-show="!user.isAuthenticated">
           <li ng-class="{ active: routeIs('/usersignin') }">
-            <a href="#/login" style=" color: #080808; font-style: normal; font-size: x-large;">Login</a>
+            <a href="#/usersignin" style=" color: #080808; font-style: normal; font-size: x-large;">Login</a>
             <!-- <a href="#/login"><img src="assets/images/login.png"></a> -->
           </li>
         </ul>
         <ul class="nav navbar-right" ng-show="!user.isAuthenticated">
           <li ng-class="{ active: routeIs('/usersignup') }">
-            <a href="#/usersignup" style=" color: #080808; font-style: normal; font-size: x-large;">Sign up</a>
-            <!-- <a href="#/login"><img src="assets/images/login.png"></a> -->
+            <a href="#/usersignup" style="color: #080808; font-style: normal; font-size: x-large;">Sign up</a>
           </li>
         </ul>
         <ul class="nav navbar-nav navbar-right" ng-show="user.isAuthenticated">
           <li class="dropdown">
-            <a href="" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-user"></span>
+            <a href="" class="dropdown-toggle" style="color: #080808; font-style: normal; font-size: large;" data-toggle="dropdown"><span class="glyphicon glyphicon-user"></span>
               <span ng-bind="user.displayName"></span> <b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li><a href="" ng-click="logout()">Logout</a></li>
+              <li><a href="#/profile">Profile</a></li>
             </ul>
           </li>
         </ul>
@@ -82,10 +82,10 @@
   <script src="/home/home.js"></script>
   <script src="/shared/appointsapi.js"></script>
   <script src="/appointments/appointments.js"></script>
-  <script src="/appointments/profile.js"></script>
-  <script src="/appointments/usersignin.js"></script>
   <script src="/appointments/usersignup.js"></script>
   <script src="/auth/usersession.js"></script>
+  <script src="/appointments/profile.js"></script>
+  <script src="/appointments/usersignin.js"></script>
   <script src="/auth/authinterceptor.js"></script>
   <script src="/auth/login.js"></script>
   <script src="/app.js"></script>
