Update login details

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -51,8 +51,9 @@
             <a href="" class="dropdown-toggle" style="color: #080808; font-style: normal; font-size: large;" data-toggle="dropdown"><span class="glyphicon glyphicon-user"></span>
               <span ng-bind="user.displayName"></span> <b class="caret"></b></a>
             <ul class="dropdown-menu">
+              <li><a href="#/profile">Update/View Profile</a></li>
+              <li><a href="#/logindetails">Update Login Details</a></li>
               <li><a href="" ng-click="logout()">Logout</a></li>
-              <li><a href="#/profile">Profile</a></li>
             </ul>
           </li>
         </ul>
