Landing page and update login details

--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -8,7 +8,7 @@
 </div>
 <div class="row">
 
-  <div class="col-md-8">
+  <!-- <div class="col-md-8">
     <h3>Where to go next?</h3>
     <ul>
       <li><a href="#/appointments">Schedule some appointments</a></li>
@@ -21,6 +21,6 @@
       <li><a href="https://github.com/martijnboland/appoints-client">Go to the appoints-client GitHub project (this
           application)</a></li>
     </ul>
-  </div>
+  </div> -->
 </div>
 <footer class="pull-right">DOC Connect {{version}} - &copy; Pritpal Singh Kandhari, 2022</footer>
