--- a/src/app/appointments/appointments.html
+++ b/src/app/appointments/appointments.html
@@ -4,18 +4,20 @@
 
     <form role="form" name="form">
       <div class="form-group">
-        <input type="text" class="form-control" id="title" placeholder="Enter appointment description" ng-model="newAppointment.title">
+        <input type="text" class="form-control" id="title" placeholder="Enter appointment description"
+          ng-model="newAppointment.title">
       </div>
       <div class="form-group">
         <label for="dateAndTime">Appointment date and time</label>
         <div class="dropdown">
-          <a class="dropdown-toggle" id="dropdown2" role="button" data-toggle="dropdown" data-target="." href="#">
+          <a class="dropdown-toggle" id="dropdown2" role="button" data-toggle="dropdown">
             <div class="input-group">
               <p class="form-control-static">{{ newAppointment.dateAndTime | date:'d MMM, y H:mm' }}</p>
             </div>
           </a>
           <ul class="" role="menu" aria-labelledby="dLabel">
-            <datetimepicker ng-model="newAppointment.dateAndTime" data-on-set-time="onTimeSet(newDate, oldDate)" datetimepicker-config="{ dropdownSelector: '#dropdown2', startView: 'hour', minuteStep: 15 }"/>
+            <datetimepicker ng-model="newAppointment.dateAndTime" data-on-set-time="onTimeSet(newDate, oldDate)"
+              datetimepicker-config="{ dropdownSelector: '#dropdown2', startView: 'hour', minuteStep: 15 }" />
           </ul>
         </div>
       </div>
@@ -32,7 +34,8 @@
         <label for="remarks">Remarks</label>
         <textarea id="remarks" class="form-control" rows="3" ng-model="newAppointment.remarks"> </textarea>
       </div>
-      <button type="submit" class="btn btn-default" ng-click="createAppointment()" ng-disabled="form.$invalid">Create</button>
+      <button type="submit" class="btn btn-default" ng-click="createAppointment()"
+        ng-disabled="form.$invalid">Create</button>
     </form>
 
   </div>
@@ -43,15 +46,21 @@
       <li class="list-group-item" ng-repeat="appointment in upcomingAppointments">
         <div>
           <div class="dropdown">
-            <a href="" class="pull-right" ng-click="removeAppointment(appointment)" title="Remove"><span class="glyphicon glyphicon-remove"></span></a>
-            <a class="dropdown-toggle" role="button" data-toggle="dropdown" data-target="#" title="Reschedule appointment" id="appointment{{$index}}" href="" ng-click="setAppointmentForEdit(appointment)"><span class="glyphicon glyphicon-time"></span></a>
+            <a href="" class="pull-right" ng-click="removeAppointment(appointment)" title="Remove"><span
+                class="glyphicon glyphicon-remove"></span></a>
+            <a class="dropdown-toggle" role="button" data-toggle="dropdown" data-target="#"
+              title="Reschedule appointment" id="appointment{{$index}}" href=""
+              ng-click="setAppointmentForEdit(appointment)"><span class="glyphicon glyphicon-time"></span></a>
             <ul class="dropdown-menu" role="menu">
-              <datetimepicker data-ng-model="editAppointment.dateAndTime" data-datetimepicker-config="{ dropdownSelector: '#appointment{{$index}}', startView: 'hour', minuteStep: 15 }" on-set-time="reschedule(newDate, oldDate)"/>
+              <datetimepicker data-ng-model="editAppointment.dateAndTime"
+                data-datetimepicker-config="{ dropdownSelector: '#appointment{{$index}}', startView: 'hour', minuteStep: 15 }"
+                on-set-time="reschedule(newDate, oldDate)" />
             </ul>
           </div>
         </div>
-        <h4 class="list-group-item-heading">{{appointment.title}} <small>{{appointment.dateAndTime | date:'d MMM, y H:mm'}}-{{appointment.endDateAndTime | date:'H:mm'}}, duration {{appointment.duration}} mins</small></h4>
-        <p class="list-group-item-text">{{appointment.remarks}}</p>        
+        <h4 class="list-group-item-heading">{{appointment.title}} <small>{{appointment.dateAndTime | date:'d MMM, y
+            H:mm'}}-{{appointment.endDateAndTime | date:'H:mm'}}, duration {{appointment.duration}} mins</small></h4>
+        <p class="list-group-item-text">{{appointment.remarks}}</p>
       </li>
     </ul>
     <h2>Past appointments</h2>
@@ -59,10 +68,12 @@
     <ul class="list-group">
       <li class="list-group-item" ng-repeat="appointment in pastAppointments">
         <div>
-          <a href="" class="pull-right" ng-click="removeAppointment(appointment)" title="Remove"><span class="glyphicon glyphicon-remove"></span></a>
+          <a href="" class="pull-right" ng-click="removeAppointment(appointment)" title="Remove"><span
+              class="glyphicon glyphicon-remove"></span></a>
         </div>
-        <h4 class="list-group-item-heading">{{appointment.title}} <small>{{appointment.dateAndTime | date:'d MMM, y H:mm'}}-{{appointment.endDateAndTime | date:'H:mm'}}, duration {{appointment.duration}} mins</small></h4>
-        <p class="list-group-item-text">{{appointment.remarks}}</p>        
+        <h4 class="list-group-item-heading">{{appointment.title}} <small>{{appointment.dateAndTime | date:'d MMM, y
+            H:mm'}}-{{appointment.endDateAndTime | date:'H:mm'}}, duration {{appointment.duration}} mins</small></h4>
+        <p class="list-group-item-text">{{appointment.remarks}}</p>
       </li>
     </ul>
 
