--- a/src/app/appointments/profile.html
+++ b/src/app/appointments/profile.html
@@ -1,4 +1,9 @@
 <div class="" ng-app="appoints" ng-controller="ProfileCtrl">
+    <div style="font-size: larger;padding-left: 5%;" ng-if="isreadonly">
+        <a class="dropdown-toggle" role="button" title="Go to landing page" id="patient{{$index}}" href=""
+            ng-click="goToLandingPage()"><span class="glyphicon glyphicon-circle-arrow-left"></span>Go to landing
+            page</a>
+    </div>
     <h1 ng-if="!dataLoading" style="text-align: center;padding-bottom: 25px;"><b>{{profileData.UserDetails.FirstName}}
             {{profileData.UserDetails.LastName}}</b></h1>
     <form name="form" ng-submit="register()" ng-if="!dataLoading" role="form">
@@ -6,7 +11,7 @@
             <div class="form-group col-md-12"
                 ng-class="{ 'has-error': form.email.$dirty && (form.email.$error.required || form.email.$error.email) }">
                 <label for="username">Email</label>
-                <input type="email" name="email" id="email" class="form-control"
+                <input type="email" name="email" id="email" class="form-control" ng-readonly="{{isreadonly}}"
                     ng-model="profileData.UserDetails.Email" required />
                 <span ng-show="form.email.$dirty && form.email.$error.email" class="help-block">This email format is
                     invalid!</span>
@@ -18,7 +23,7 @@
             <div class="form-group col-md-6"
                 ng-class="{ 'has-error': form.firstName.$dirty && form.firstName.$error.required }">
                 <label for="username">First name</label>
-                <input type="text" name="firstName" id="firstName" class="form-control"
+                <input type="text" name="firstName" id="firstName" class="form-control" ng-readonly="{{isreadonly}}"
                     ng-model="profileData.UserDetails.FirstName" required />
                 <span ng-show="form.firstName.$dirty && form.firstName.$error.required" class="help-block">First name is
                     required</span>
@@ -26,7 +31,7 @@
             <div class="form-group col-md-6"
                 ng-class="{ 'has-error': form.lastName.$dirty && form.lastName.$error.required }">
                 <label for="username">Last name</label>
-                <input type="text" name="lastName" id="lastName" class="form-control"
+                <input type="text" name="lastName" id="lastName" class="form-control" ng-readonly="{{isreadonly}}"
                     ng-model="profileData.UserDetails.LastName" required />
                 <span ng-show="form.lastName.$dirty && form.lastName.$error.required" class="help-block">Last name is
                     required</span>
@@ -36,54 +41,54 @@
             <div class="form-group col-md-6">
                 <label for="username">Marital Status</label>
                 <input type="text" name="maritalStatus" id="maritalStatus" class="form-control"
-                    ng-model="profileData.UserDetails.MaritalStatus" />
+                    ng-readonly="{{isreadonly}}" ng-model="profileData.UserDetails.MaritalStatus" />
             </div>
             <div class="form-group col-md-6">
                 <label for="username">Gender</label>
-                <input type="text" name="gender" id="gender" class="form-control"
+                <input type="text" name="gender" id="gender" class="form-control" ng-readonly="{{isreadonly}}"
                     ng-model="profileData.UserDetails.Gender" />
             </div>
         </div>
         <div class="form-group col-md-12" style="padding-left: 15%;padding-right: 15%;">
             <div class="form-group col-md-6">
                 <label for="username">Address</label>
-                <input type="text" name="address" id="address" class="form-control"
+                <input type="text" name="address" id="address" class="form-control" ng-readonly="{{isreadonly}}"
                     ng-model="profileData.UserDetails.Address" />
             </div>
             <div class="form-group col-md-6">
                 <label for="username">Postal Code</label>
-                <input type="text" name="postalCode" id="postalCode" class="form-control"
+                <input type="text" name="postalCode" id="postalCode" class="form-control" ng-readonly="{{isreadonly}}"
                     ng-model="profileData.UserDetails.PostalCode" />
             </div>
         </div>
         <div class="form-group col-md-12" style="padding-left: 15%;padding-right: 15%;">
             <div class="form-group col-md-6">
                 <label for="username">City</label>
-                <input type="text" name="city" id="city" class="form-control" ng-model="profileData.UserDetails.City" />
+                <input type="text" name="city" id="city" class="form-control" ng-readonly="{{isreadonly}}"
+                    ng-model="profileData.UserDetails.City" />
             </div>
             <div class="form-group col-md-6">
                 <label for="username">Province</label>
-                <input type="text" name="province" id="province" class="form-control"
+                <input type="text" name="province" id="province" class="form-control" ng-readonly="{{isreadonly}}"
                     ng-model="profileData.UserDetails.Province" />
             </div>
         </div>
         <div class="form-group col-md-12" style="padding-left: 15%;padding-right: 15%;">
             <div class="form-group col-md-6">
                 <label for="username">Country</label>
-                <input type="text" name="country" id="country" class="form-control"
+                <input type="text" name="country" id="country" class="form-control" ng-readonly="{{isreadonly}}"
                     ng-model="profileData.UserDetails.Country" />
             </div>
             <div class="form-group col-md-6">
                 <label for="username">Contact</label>
-                <input type="number" name="contact" id="contact" class="form-control"
+                <input type="number" name="contact" id="contact" class="form-control" ng-readonly="{{isreadonly}}"
                     ng-model="profileData.UserDetails.Contact" />
             </div>
         </div>
 
-        <div class="form-group col-md-12" style="padding-left: 15%;padding-right: 15%;">
+        <div class="form-group col-md-12" ng-if="!isreadonly" style="padding-left: 15%;padding-right: 15%;">
             <div class="form-actions col-md-6">
                 <button type="submit" ng-disabled="form.$invalid || dataLoading" class="btn btn-primary">Submit</button>
-
                 <a href="#/usersignin" class="btn btn-link">Cancel</a>
             </div>
         </div>
