--- a/src/app/appointments/logindetails.html
+++ b/src/app/appointments/logindetails.html
@@ -17,8 +17,8 @@
         </div>
         <div class="form-actions">
             <button type="submit" ng-click="updatelogindetails()" ng-disabled="form.$invalid || vm.dataLoading"
-                class="btn btn-primary">Login</button>
-            <a href="#/" class="btn btn-link">Cancel</a>
+                class="btn btn-primary">Submit</button>
+            <a href="#/landing" class="btn btn-link">Cancel</a>
         </div>
     </form>
 </div>
