--- a/src/app/appointments/profile.html
+++ b/src/app/appointments/profile.html
@@ -4,13 +4,14 @@
             ng-click="goToLandingPage()"><span class="glyphicon glyphicon-circle-arrow-left"></span>Go to landing
             page</a>
     </div>
-    <h1 ng-if="!dataLoading" style="text-align: center;padding-bottom: 25px;"><b>{{profileData.UserDetails.FirstName}}
-            {{profileData.UserDetails.LastName}}</b></h1>
+    <h2 ng-if="!dataLoading" style="text-align: center;">Details of:
+        <b>{{profileData.UserDetails.FirstName}} {{profileData.UserDetails.LastName}}</b>
+    </h2>
     <form name="form" ng-submit="register()" ng-if="!dataLoading" role="form">
         <div class="form-group col-md-12" style="padding-left: 15%;padding-right: 15%;">
             <div class="form-group col-md-12"
                 ng-class="{ 'has-error': form.email.$dirty && (form.email.$error.required || form.email.$error.email) }">
-                <label for="username">Email</label>
+                <label for="email">Email</label>
                 <input type="email" name="email" id="email" class="form-control" ng-readonly="{{isreadonly}}"
                     ng-model="profileData.UserDetails.Email" required />
                 <span ng-show="form.email.$dirty && form.email.$error.email" class="help-block">This email format is
@@ -22,7 +23,7 @@
         <div class="form-group col-md-12" style="padding-left: 15%;padding-right: 15%;">
             <div class="form-group col-md-6"
                 ng-class="{ 'has-error': form.firstName.$dirty && form.firstName.$error.required }">
-                <label for="username">First name</label>
+                <label for="firstName">First name</label>
                 <input type="text" name="firstName" id="firstName" class="form-control" ng-readonly="{{isreadonly}}"
                     ng-model="profileData.UserDetails.FirstName" required />
                 <span ng-show="form.firstName.$dirty && form.firstName.$error.required" class="help-block">First name is
@@ -30,7 +31,7 @@
             </div>
             <div class="form-group col-md-6"
                 ng-class="{ 'has-error': form.lastName.$dirty && form.lastName.$error.required }">
-                <label for="username">Last name</label>
+                <label for="lastName">Last name</label>
                 <input type="text" name="lastName" id="lastName" class="form-control" ng-readonly="{{isreadonly}}"
                     ng-model="profileData.UserDetails.LastName" required />
                 <span ng-show="form.lastName.$dirty && form.lastName.$error.required" class="help-block">Last name is
@@ -39,50 +40,114 @@
         </div>
         <div class="form-group col-md-12" style="padding-left: 15%;padding-right: 15%;">
             <div class="form-group col-md-6">
-                <label for="username">Marital Status</label>
+                <label for="maritalStatus">Marital Status</label>
                 <input type="text" name="maritalStatus" id="maritalStatus" class="form-control"
                     ng-readonly="{{isreadonly}}" ng-model="profileData.UserDetails.MaritalStatus" />
             </div>
             <div class="form-group col-md-6">
-                <label for="username">Gender</label>
+                <label for="gender">Gender</label>
                 <input type="text" name="gender" id="gender" class="form-control" ng-readonly="{{isreadonly}}"
                     ng-model="profileData.UserDetails.Gender" />
             </div>
         </div>
         <div class="form-group col-md-12" style="padding-left: 15%;padding-right: 15%;">
             <div class="form-group col-md-6">
-                <label for="username">Address</label>
+                <label for="address">Address</label>
                 <input type="text" name="address" id="address" class="form-control" ng-readonly="{{isreadonly}}"
                     ng-model="profileData.UserDetails.Address" />
             </div>
             <div class="form-group col-md-6">
-                <label for="username">Postal Code</label>
+                <label for="postalCode">Postal Code</label>
                 <input type="text" name="postalCode" id="postalCode" class="form-control" ng-readonly="{{isreadonly}}"
                     ng-model="profileData.UserDetails.PostalCode" />
             </div>
         </div>
         <div class="form-group col-md-12" style="padding-left: 15%;padding-right: 15%;">
             <div class="form-group col-md-6">
-                <label for="username">City</label>
+                <label for="city">City</label>
                 <input type="text" name="city" id="city" class="form-control" ng-readonly="{{isreadonly}}"
                     ng-model="profileData.UserDetails.City" />
             </div>
             <div class="form-group col-md-6">
-                <label for="username">Province</label>
+                <label for="province">Province</label>
                 <input type="text" name="province" id="province" class="form-control" ng-readonly="{{isreadonly}}"
                     ng-model="profileData.UserDetails.Province" />
             </div>
         </div>
         <div class="form-group col-md-12" style="padding-left: 15%;padding-right: 15%;">
             <div class="form-group col-md-6">
-                <label for="username">Country</label>
+                <label for="country">Country</label>
                 <input type="text" name="country" id="country" class="form-control" ng-readonly="{{isreadonly}}"
                     ng-model="profileData.UserDetails.Country" />
             </div>
             <div class="form-group col-md-6">
-                <label for="username">Contact</label>
+                <label for="contact">Contact</label>
                 <input type="number" name="contact" id="contact" class="form-control" ng-readonly="{{isreadonly}}"
                     ng-model="profileData.UserDetails.Contact" />
+            </div>
+        </div>
+
+        <h2 style="text-align: center;" ng-if="!profileData.UserDetails.IsAdmin && profileData.UserDetails.IsDoctor"><b>Doctor's Details</b></h2>
+        <div class="form-group col-md-12" style="padding-left: 15%;padding-right: 15%;" ng-if="!profileData.UserDetails.IsAdmin && profileData.UserDetails.IsDoctor">
+            <div class="form-group col-md-6">
+                <label for="availability">Availability</label>
+                <input type="text" name="availability" id="availability" class="form-control"
+                    ng-readonly="{{isreadonly}}" ng-model="profileData.Availability" />
+            </div>
+            <div class="form-group col-md-6">
+                <label for="currentWorkingStatus">Current Working Status</label>
+                <input type="text" name="currentWorkingStatus" id="currentWorkingStatus" class="form-control"
+                    ng-readonly="{{isreadonly}}" ng-model="profileData.CurrentWorkingStatus" />
+            </div>
+        </div>
+        <div class="form-group col-md-12" style="padding-left: 15%;padding-right: 15%;" ng-if="!profileData.UserDetails.IsAdmin && profileData.UserDetails.IsDoctor">
+            <div class="form-group col-md-6">
+                <label for="department">Department</label>
+                <input type="text" name="department" id="department" class="form-control" ng-readonly="{{isreadonly}}"
+                    ng-model="profileData.Department" />
+            </div>
+            <div class="form-group col-md-6">
+                <label for="fieldOfPractice">Field of Practice</label>
+                <input type="text" name="fieldOfPractice" id="fieldOfPractice" class="form-control"
+                    ng-readonly="{{isreadonly}}" ng-model="profileData.FieldOfPractice" />
+            </div>
+        </div>
+        <div class="form-group col-md-12" style="padding-left: 15%;padding-right: 15%;" ng-if="!profileData.UserDetails.IsAdmin && profileData.UserDetails.IsDoctor">
+            <div class="form-group col-md-6">
+                <label for="degree">Degree</label>
+                <input type="text" name="degree" id="degree" class="form-control" ng-readonly="{{isreadonly}}"
+                    ng-model="profileData.Degree" />
+            </div>
+            <div class="form-group col-md-6">
+                <label for="graduatedFrom">Graduated From</label>
+                <input type="text" name="graduatedFrom" id="graduatedFrom" class="form-control"
+                    ng-readonly="{{isreadonly}}" ng-model="profileData.GraduatedFrom" />
+            </div>
+        </div>
+        <div class="form-group col-md-12" style="padding-left: 15%;padding-right: 15%;" ng-if="!profileData.UserDetails.IsAdmin && profileData.UserDetails.IsDoctor">
+            <div class="form-group col-md-6">
+                <label for="dateOfJoining">Date of Joining</label>
+                <input type="text" name="dateOfJoining" id="dateOfJoining" class="form-control"
+                    ng-readonly="{{isreadonly}}" ng-model="profileData.DOJ" />
+            </div>
+            <div class="form-group col-md-6">
+                <label for="yearsOfExp">Years of Experience</label>
+                <input type="text" name="yearsOfExp" id="yearsOfExp" class="form-control" ng-readonly="{{isreadonly}}"
+                    ng-model="profileData.YearsOfExp" />
+            </div>
+        </div>
+
+        <h2 style="text-align: center;" ng-if="!profileData.UserDetails.IsAdmin && !profileData.UserDetails.IsDoctor"><b>Patient's Details</b></h2>
+        <div class="form-group col-md-12" style="padding-left: 15%;padding-right: 15%;" ng-if="(!profileData.UserDetails.IsAdmin && !profileData.UserDetails.IsDoctor)">
+            <div class="form-group col-md-6">
+                <label for="allergies">Allergies</label>
+                <input type="text" name="allergies" id="allergies" class="form-control" ng-readonly="{{isreadonly}}"
+                    ng-model="profileData.Allergies" />
+            </div>
+            <div class="form-group col-md-6">
+                <label for="healthIssues">Health Issues</label>
+                <input type="text" name="healthIssues" id="healthIssues" class="form-control"
+                    ng-readonly="{{isreadonly}}" ng-model="profileData.HealthIssues" />
             </div>
         </div>
 
