Appointment control and Dashboard change

--- a/src/app/appointments/logindetails.html
+++ b/src/app/appointments/logindetails.html
@@ -18,7 +18,7 @@
         <div class="form-actions">
             <button type="submit" ng-click="updatelogindetails()" ng-disabled="form.$invalid || vm.dataLoading"
                 class="btn btn-primary">Submit</button>
-            <a href="#/landing" class="btn btn-link">Cancel</a>
+            <a href="#/dashboard" class="btn btn-link">Cancel</a>
         </div>
     </form>
 </div>
