--- a/src/app/appointments/dashboard.html
+++ b/src/app/appointments/dashboard.html
@@ -1,55 +1,99 @@
 <div ng-app="appoints">
-    <h1 style="text-align: center;padding-bottom: 25px;"><b>Welcome! {{user.displayName}}</b></h1>
-    <div class="col-md-6">
-        <h2>List of Doctors</h2>
-        <!-- <p ng-if="upcomingAppointments.length === 0">-- None --</p> -->
+    <h1 style="text-align: center;"><b>Welcome! {{user.displayName}}</b></h1>
+    <div class="col-md-4" ng-if="user.isAdmin">
+        <h2><b>List of Doctors</b></h2>
+        <p ng-if="doctors.length === 0">-- None --</p>
         <ul class="list-group">
             <li class="list-group-item" ng-repeat="doctor in doctors">
-                <div>
-                    <div class="dropdown">
-                        <!-- <a href="" class="pull-right" ng-click="removeAppointment(doctor)" title="Remove"><span
-                                class="glyphicon glyphicon-remove"></span></a> -->
-                        <a class="dropdown-toggle" role="button" data-toggle="dropdown" title="Open doctor details"
-                            id="doctor{{$index}}" href="" ng-click="openDoctorDetails(doctor)"><span
-                                class="glyphicon glyphicon-new-window"></span></a>
-                        <!-- <ul class="dropdown-menu" role="menu">
-                            <datetimepicker data-ng-model="editAppointment.dateAndTime"
-                                data-datetimepicker-config="{ dropdownSelector: '#appointment{{$index}}', startView: 'hour', minuteStep: 15 }"
-                                on-set-time="reschedule(newDate, oldDate)" />
-                        </ul> -->
-                    </div>
-                </div>
-                <h4 class="list-group-item-heading">{{doctor.UserDetails.FirstName}}
-                    {{doctor.UserDetails.LastName}}, <small>Graduated from: {{doctor.GraduatedFrom}},
-                        Practice: {{doctor.FieldOfPractice}}</small></h4>
+                <h4 class="list-group-item-heading"><a href=""
+                        ng-click="openDoctorDetails(doctor)"><b>{{doctor.UserDetails.FirstName}}
+                            {{doctor.UserDetails.LastName}}</b></a></h4>
+                <h5 class="list-group-item-heading">Graduated from: {{doctor.GraduatedFrom}}</h5>
+                <h5 class="list-group-item-heading">Practice: {{doctor.FieldOfPractice}}</h5>
                 <p class="list-group-item-text">{{doctor.CurrentWorkingStatus}}</p>
             </li>
         </ul>
     </div>
-    <div class="col-md-6">
-        <h2>List of Patients</h2>
-        <!-- <p ng-if="upcomingAppointments.length === 0">-- None --</p> -->
+    <div class="col-md-4" ng-if="user.isAdmin">
+        <h2><b>List of Patients</b></h2>
+        <p ng-if="patients.length === 0">-- None --</p>
         <ul class="list-group">
             <li class="list-group-item" ng-repeat="patient in patients">
-                <div>
-                    <div class="dropdown">
-                        <!-- <a href="" class="pull-right" ng-click="removeAppointment(patient)" title="Remove"><span
-                                class="glyphicon glyphicon-remove"></span></a> -->
-                        <a class="dropdown-toggle" role="button" data-toggle="dropdown" title="Open patient details"
-                            id="patient{{$index}}" href="" ng-click="openPatientDetails(patient)"><span
-                                class="glyphicon glyphicon-new-window"></span></a>
-                        <!-- <ul class="dropdown-menu" role="menu">
-                            <datetimepicker data-ng-model="editAppointment.dateAndTime"
-                                data-datetimepicker-config="{ dropdownSelector: '#appointment{{$index}}', startView: 'hour', minuteStep: 15 }"
-                                on-set-time="reschedule(newDate, oldDate)" />
-                        </ul> -->
-                    </div>
-                </div>
-                <h4 class="list-group-item-heading">{{patient.UserDetails.FirstName}}
-                    {{patient.UserDetails.LastName}}, <small>Health Issues: {{patient.HealthIssues}},
-                        Allergies: {{patient.Allergies}}</small></h4>
+                <h4 class="list-group-item-heading"><a href=""
+                        ng-click="openPatientDetails(patient)"><b>{{patient.UserDetails.FirstName}}
+                            {{patient.UserDetails.LastName}}</b></a></h4>
+                <h5 class="list-group-item-heading">Health Issues: {{patient.HealthIssues}}</h5>
+                <h5 class="list-group-item-heading">Allergies: {{patient.Allergies}}</h5>
                 <p class="list-group-item-text">{{patient.CurrentWorkingStatus}}</p>
             </li>
         </ul>
+    </div>
+    <div class="col-md-4" ng-if="user.isAdmin">
+        <h2><b>List of Appointments</b></h2>
+        <p ng-if="appointments.length === 0">-- None --</p>
+        <ul class="list-group">
+            <li class="list-group-item" ng-repeat="appointment in appointments">
+                <h4 class="list-group-item-heading"><b>{{appointment.Title}}</b> <small>{{appointment.DateAndTime |
+                        date:'d MMM, y H:mm'}},
+                        duration: {{appointment.Duration}} mins</small></h4>
+                <h5 class="list-group-item-heading">Patient: <a href=""
+                        ng-click="openAppointmentPatient(appointment)">{{appointment.PatientName}}</a></h5>
+                <h5 class="list-group-item-heading">Doctor: <a href=""
+                        ng-click="openAppointmentDoctor(appointment)">{{appointment.DoctorName}}</a></h5>
+                <h5 class="list-group-item-heading">Remarks: {{appointment.Remarks}}</h5>
+            </li>
+        </ul>
+    </div>
+
+    <div class="col-md-4" ng-if="!user.isAdmin && user.isDoctor">
+        <h2><b>List of Doctor's Appointments</b></h2>
+        <p ng-if="eventSourceDoctor.length === 0">-- None --</p>
+        <ul class="list-group">
+            <li class="list-group-item" ng-repeat="appointment in eventSourceDoctor">
+                <h4 class="list-group-item-heading"><b>{{appointment.Title}}</b> <small>{{appointment.DateAndTime |
+                        date:'d MMM, y H:mm'}},
+                        duration: {{appointment.Duration}} mins</small></h4>
+                <h5 class="list-group-item-heading">Patient: <a href=""
+                        ng-click="openAppointmentPatient(appointment)">{{appointment.PatientName}}</a></h5>
+                <h5 class="list-group-item-heading">Remarks: {{appointment.Remarks}}</h5>
+            </li>
+        </ul>
+    </div>
+    <div class="col-md-8" ng-if="!user.isAdmin && user.isDoctor">
+        <h2 style="text-align: center;"><b>Doctor's Appointment Calendar</b></h2>
+        <div class="btn-toolbar">
+            <div class="btn-group">
+                <button class="btn btn-success" ng-click="changeView('agendaDay', 'myCalendar')">AgendaDay</button>
+                <button class="btn btn-success" ng-click="changeView('agendaWeek', 'myCalendar')">AgendaWeek</button>
+                <button class="btn btn-success" ng-click="changeView('month', 'myCalendar')">Month</button>
+            </div>
+        </div>
+        <div class="calendar" ng-model="eventSourceDoctor" calendar="myCalendar" ui-calendar="uiConfig.calendar"></div>
+    </div>
+
+    <div class="col-md-4" ng-if="!user.isAdmin && !user.isDoctor">
+        <h2><b>List of Patient's Appointments</b></h2>
+        <p ng-if="eventSourcePatient.length === 0">-- None --</p>
+        <ul class="list-group">
+            <li class="list-group-item" ng-repeat="appointment in eventSourcePatient">
+                <h4 class="list-group-item-heading"><b>{{appointment.Title}}</b> <small>{{appointment.DateAndTime |
+                        date:'d MMM, y H:mm'}},
+                        duration: {{appointment.Duration}} mins</small></h4>
+                <h5 class="list-group-item-heading">Doctor: <a href=""
+                        ng-click="openAppointmentPatient(appointment)">{{appointment.DoctorName}}</a></h5>
+                <h5 class="list-group-item-heading">Remarks: {{appointment.Remarks}}</h5>
+            </li>
+        </ul>
+    </div>
+    <div class="col-md-8" ng-if="!user.isAdmin && !user.isDoctor">
+        <h2 style="text-align: center;"><b>Patient's Appointment Calendar</b></h2>
+        <div class="btn-toolbar">
+            <div class="btn-group">
+                <button class="btn btn-success" ng-click="changeView('agendaDay', 'myCalendar')">AgendaDay</button>
+                <button class="btn btn-success" ng-click="changeView('agendaWeek', 'myCalendar')">AgendaWeek</button>
+                <button class="btn btn-success" ng-click="changeView('month', 'myCalendar')">Month</button>
+            </div>
+        </div>
+        <div class="calendar" ng-model="eventSourcePatient" calendar="myCalendar" ui-calendar="uiConfig.calendar"></div>
     </div>
 </div>
