--- a/src/app/appointments/profile.html
+++ b/src/app/appointments/profile.html
@@ -160,7 +160,7 @@
         <div class="form-group col-md-12" ng-if="!isreadonly" style="padding-left: 15%;padding-right: 15%;">
             <div class="form-actions col-md-6">
                 <button type="submit" ng-disabled="form.$invalid || dataLoading" class="btn btn-primary">Submit</button>
-                <a href="#/usersignin" class="btn btn-link">Cancel</a>
+                <a href="#/dashboard" class="btn btn-link">Cancel</a>
             </div>
         </div>
     </form>
